--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -88,11 +88,12 @@
 <!ENTITY Ctr_tnotlfix 		"Dunkle Textfarbe für nicht-aktive Tabs">
 <!ENTITY Ctr_tnotlfixt		"Einige Linux Versionen und Windows Themes können Text unleserlich darstellen, wenn die 'Tabs unten' Einstellung gewählt ist.">
 <!ENTITY Ctr_bfurlbarfix 	"2.5px Adressleisten-Randradius auf der linken Seite">
-<!ENTITY Ctr_bfurlbarfixt	"Der verschiebbare Vor-Zurück Button benötigt diese Option, falls kein anderer Css-Code zur Änderung des Randradius verwendet wird.">
+<!ENTITY Ctr_bfurlbarfixt	"Der verschiebbare Vor-Zurück Button benötigt diese Option, falls kein anderer CSS-Code zur Änderung des Randradius verwendet wird.">
 
 <!ENTITY Ctr_specialtw		"Spezial Einstellungen">
 <!ENTITY Ctr_paneluibtweak	"PanelUI Button wie Anwendungsbutton darstellen (auf der Tableiste)">
 <!ENTITY Ctr_notabfog		"Tableistenhintergrund deaktivieren (Windows AeroGlass)">
 <!ENTITY Ctr_tabmokcolor	"Weißer Tabtext und weiße Tabbuttons (Neu, Schließen, Gruppen, Listen)">
-<!ENTITY Ctr_closeabarbut	"Entferne Schließen Button von der Addonleiste">
+<!ENTITY Ctr_closeabarbut	"Entferne 'Schließen'-Button von der Addonleiste">
+<!ENTITY Ctr_cpanelmenus	"Kompakte 'Panel-Menüs' (Lesezeichen, Chronic etc.)">
 <!ENTITY Ctr_cuibotbuttons	"Einstellungs-Buttons im 'Anpassen'-Modus">
