--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -95,4 +95,5 @@
 <!ENTITY Ctr_notabfog		"Eliminar niebla de fondo de la barra de pestañas (Windows AeroGlass)">
 <!ENTITY Ctr_tabmokcolor	"Color blanco para texto y botones (cerrar, nuevo, grupos, listar todas) de pestañas">
 <!ENTITY Ctr_closeabarbut	"Ocultar botón cerrar de la barra de complementos">
+<!ENTITY Ctr_cpanelmenus	"Menús del panel compacto (marcadores, historial, etc)">
 <!ENTITY Ctr_cuibotbuttons	"Los botones de opción en el modo de 'personalizar ui'">
