--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -95,4 +95,5 @@
 <!ENTITY Ctr_notabfog		"Supprimer l'effet de flou en arrière-plan sur les barres d'onglets (Windows AeroGlass)">
 <!ENTITY Ctr_tabmokcolor	"Texte des onglets et des boutons de couleur blanche (fermer, nouveau, groupes, tout lister)">
 <!ENTITY Ctr_closeabarbut	"Masquer le bouton de fermeture de la barre des modules">
+<!ENTITY Ctr_cpanelmenus	"Menus du panneau compact (signets, histoire, etc)">
 <!ENTITY Ctr_cuibotbuttons	"Les boutons d'option en mode 'personnaliser ui'">
