--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -5,6 +5,7 @@
 <!ENTITY Ctr_flexspace		"Espace flexible">
 <!ENTITY Ctr_space			"Espace">
 <!ENTITY Ctr_separator		"Separator">
+<!ENTITY Ctr_puibseparator	"PanelUI-bouton Separator">
 
 <!ENTITY Ctr_cuibuttons		"Boutons">
 <!ENTITY Ctr_cuibutnormal	"normal">
@@ -29,11 +30,16 @@
 <!ENTITY Ctr_tabs1m			"Onglets à angle droit (australized)">
 <!ENTITY Ctr_tabs2			"Onglets arrondis (alternative)">
 <!ENTITY Ctr_tabs3			"Onglets arrondis (alternative Aero)">
-<!ENTITY Ctr_tabsotoff		"Onglets position basse">
+<!ENTITY Ctr_tabsontop0		"Onglets en haut [pas fixé] (par défaut)">
+<!ENTITY Ctr_tabsontop1		"Onglets en haut [tabsontop=true]">
+<!ENTITY Ctr_tabsontop2		"Onglets position basse [tabsontop=false]">
 <!ENTITY Ctr_tabsintitlebar	"Onglets dans la barre de titre">
 <!ENTITY Ctr_tabwidth0		"Largeur maximale: 180px (defaut)">
 <!ENTITY Ctr_tabwidth1		"Largeur maximale: 150px">
 <!ENTITY Ctr_tabwidth2		"Largeur maximale: 250px (classique)">
+<!ENTITY Ctr_tabmwidth0		"Largeur minimale: 100px (defaut)">
+<!ENTITY Ctr_tabmwidth1		"Largeur minimale: 150px">
+<!ENTITY Ctr_tabmwidth2		"Largeur minimale: 54px">
 
 <!ENTITY Ctr_appbutton		"Bouton d'application">
 <!ENTITY Ctr_appbutton0		"Bouton désactivé">
@@ -54,6 +60,8 @@
 <!ENTITY Ctr_appbuttxt		"Texte 'Firefox' (la barre d'outils)">
 
 <!ENTITY Ctr_ui				"Interface générale">
+<!ENTITY Ctr_nbiconsize1	"#nav-bar[iconsize='small'] (par défaut)">
+<!ENTITY Ctr_nbiconsize2	"#nav-bar[iconsize='large']">
 <!ENTITY Ctr_smallnavbut	"Petit boutons (barre de navigation)">
 <!ENTITY Ctr_hidenavbar		"Masquer la barre de navigation">
 <!ENTITY Ctr_buttons		"Boutons de la barre d'outils">
@@ -65,6 +73,8 @@
 <!ENTITY Ctr_findbar_def	"Barre de recherche (position par défaut)">
 <!ENTITY Ctr_findbar_top	"Barre de recherche en haut">
 <!ENTITY Ctr_findbar_bot	"Barre de recherche en bas">
+<!ENTITY Ctr_findbar_topa	"Barre de recherche en haut (alternative)">
+<!ENTITY Ctr_findbar_bota	"Barre de recherche en bas (alternative)">
 <!ENTITY Ctr_nav_txt_ico0	"Afficher seulement les icônes (defaut)">
 <!ENTITY Ctr_nav_txt_ico1	"Afficher de grandes icônes">
 <!ENTITY Ctr_nav_txt_ico2	"Afficher icônes et textes">
@@ -84,16 +94,15 @@
 <!ENTITY Ctr_textc			"texte">
 <!ENTITY Ctr_textsh			"ombre du texte">
 
-<!ENTITY Ctr_fixes			"Réglages">
-<!ENTITY Ctr_tnotlfix 		"Texte en noir sur les onglets inactifs">
-<!ENTITY Ctr_tnotlfixt		"Certaines versions de Linux et certains thèmes pour Windows peuvent afficher de mauvaises couleurs pour le texte des onglets, si ceux-ci ne sont pas en haut.">
-<!ENTITY Ctr_bfurlbarfix 	"Forcer la barre d'adresse à avoir un left border-radius de 2.5px">
-<!ENTITY Ctr_bfurlbarfixt	"Doit demeurer désactivé pour que le code CSS personnalisé puisse modifier la propriété left border-radius. Sinon c'est nécessaire pour que l'option « Bouton avancer/reculer déplaçable » modifie les bordures gauches des barres d'adresse en fonction du right border radius.">
-
 <!ENTITY Ctr_specialtw		"Modifications spéciales">
 <!ENTITY Ctr_paneluibtweak 	"Apparence du bouton d'application pour le panneau d'interface (sur la barre des onglets)">
 <!ENTITY Ctr_notabfog		"Supprimer l'effet de flou en arrière-plan sur les barres d'onglets (Windows AeroGlass)">
-<!ENTITY Ctr_tabmokcolor	"Texte des onglets et des boutons de couleur blanche (fermer, nouveau, groupes, tout lister)">
+<!ENTITY Ctr_tabmokcolor	"Boutons des onglets de couleur blanche (fermer, nouveau, groupes, tout lister)">
+<!ENTITY Ctr_tabmokcolor2	"Texte des onglets de couleur blanche">
 <!ENTITY Ctr_closeabarbut	"Masquer le bouton de fermeture de la barre des modules">
+<!ENTITY Ctr_bfurlbarfix 	"Forcer la barre d'adresse à avoir un left border-radius de 2.5px">
+<!ENTITY Ctr_bmanimation	"Masquer l'animation de bouton de menu de favoris">
+<!ENTITY Ctr_tabanimation	"Onglet animation (about:config)">
+<!ENTITY Ctr_dlanimation	"Animation de notification des téléchargements (about:config)">
 <!ENTITY Ctr_cpanelmenus	"Menus du panneau compact (signets, histoire, etc)">
 <!ENTITY Ctr_cuibotbuttons	"Les boutons d'option en mode 'personnaliser ui'">
