--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -16,8 +16,6 @@
 <!ENTITY Ctr_cuitxt			"Text">
 
 <!ENTITY Ctr_combrelstoptt	"[stop][reload] &gt;&gt; [stop-reload]">
-<!ENTITY Ctr_starbuttont1	"[urlbar][bookmarks button]">
-<!ENTITY Ctr_starbuttont2	"[star-button in urlbar]">
 
 <!ENTITY Ctr_main_t			"Main">
 <!ENTITY Ctr_tabcolors_t	"Custom colors">
@@ -58,16 +56,18 @@
 <!ENTITY Ctr_appbuttonI3	"and tabs toolbar!">
 <!ENTITY Ctr_alttbappb		"Alternative icons (if on toolbar)">
 <!ENTITY Ctr_appbuttxt		"'Firefox' label (if on tabs toolbar)">
+<!ENTITY Ctr_appbutmhi		"Higher position (if on tabs toolbar)">
 
 <!ENTITY Ctr_ui				"General UI">
-<!ENTITY Ctr_nbiconsize1	"#nav-bar[iconsize='small'] (default)">
-<!ENTITY Ctr_nbiconsize2	"#nav-bar[iconsize='large']">
+<!ENTITY Ctr_nbiconsize1	"Use #nav-bar[iconsize='small'] (default)">
+<!ENTITY Ctr_nbiconsize2	"Use #nav-bar[iconsize='large']">
 <!ENTITY Ctr_smallnavbut	"Small buttons on navigation toolbar">
 <!ENTITY Ctr_hidenavbar		"Hide navigation toolbar">
 <!ENTITY Ctr_buttons		"Toolbar buttons">
 <!ENTITY Ctr_backforward	"Movable back-forward button">
 <!ENTITY Ctr_wincontrols	"Movable fullscreen window controls">
-<!ENTITY Ctr_starinurl		"Star button in urlbar">
+<!ENTITY Ctr_starinurl		"Star-button in urlbar (restart Firefox)">
+<!ENTITY Ctr_statusbar		"Statusbar on add-ons bar (restart Firefox)">
 <!ENTITY Ctr_hideurelstop	"Hide urlbars stop &amp; reload buttons">
 <!ENTITY Ctr_combrelstop	"Combine stop &amp; reload buttons">
 <!ENTITY Ctr_findbar_def	"Findbar (default position)">
@@ -100,9 +100,11 @@
 <!ENTITY Ctr_tabmokcolor	"White color for separators and tab buttons (close, new, groups, list all)">
 <!ENTITY Ctr_tabmokcolor2	"White color and dark shadow for text on non-active tab">
 <!ENTITY Ctr_closeabarbut	"Hide add-on bars close button">
-<!ENTITY Ctr_bfurlbarfix	"Force urlbars left border-radius to 2.5px">
-<!ENTITY Ctr_bmanimation	"Hide bookmarks menu buttons animation">
-<!ENTITY Ctr_tabanimation	"Tabs animation (about:config)">
-<!ENTITY Ctr_dlanimation	"Downloads notification animation (about:config)">
+<!ENTITY Ctr_bfurlbarfix	"Fix urlbars border-radius: 2px (Win) / 2.5px (Mac)">
+<!ENTITY Ctr_throbberalt	"Alternative tab throbber loading animation">
+<!ENTITY Ctr_bmanimation	"Bookmarking animation">
+<!ENTITY Ctr_tabanimation	"Tab closing/opening animation (about:config)">
+<!ENTITY Ctr_dlanimation	"'Download complete' animation (about:config)">
+<!ENTITY Ctr_showtabclose	"Always show tab close button (requires restart!)">
 <!ENTITY Ctr_cpanelmenus	"Compact panel menus (bookmarks, history etc.)">
 <!ENTITY Ctr_cuibotbuttons	"Option-buttons in 'customize ui' mode">
