--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -42,7 +42,9 @@
 <!ENTITY Ctr_appbutton		"Botón de la aplicación">
 <!ENTITY Ctr_appbutton0		"Botón deshabilitado">
 <!ENTITY Ctr_appbutton1		"Botón en la barra de herramientas">
+<!ENTITY Ctr_appbutton1wt	"Botón en la barra de herramientas (text only)">
 <!ENTITY Ctr_appbutton2		"Botón en la barra de título">
+<!ENTITY Ctr_appbutton2io	"Botón en la barra de título (icon only)">
 <!ENTITY Ctr_appbuttonc_o	"Color de botón naranja (por defecto)">
 <!ENTITY Ctr_appbuttonc_a	"Color de botón azul (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Color de botón negro (Nightly)">
@@ -55,7 +57,6 @@
 <!ENTITY Ctr_appbuttonI2	"Sólo coloreado sobre la barra de">
 <!ENTITY Ctr_appbuttonI3	"herramientasy la barra de pestañas!">
 <!ENTITY Ctr_alttbappb		"Iconos alternativos (la barra de herramientas)">
-<!ENTITY Ctr_appbuttxt		"Texto 'Firefox' (la barra de pestañas)">
 <!ENTITY Ctr_appbutmhi		"Posición más alta (la barra de pestañas)">
 
 <!ENTITY Ctr_ui				"Interfaz de usuario general">
@@ -101,10 +102,14 @@
 <!ENTITY Ctr_tabmokcolor2	"Color blanco para texto de pestañas">
 <!ENTITY Ctr_closeabarbut	"Ocultar botón cerrar de la barra de complementos">
 <!ENTITY Ctr_bfurlbarfix 	"Corregir la frontera de radio de la barra de URL: 2px (Win) / 2.5px (Mac)">
+<!ENTITY Ctr_showtabclose	"Mostrar siempre el botón-pestaña de cierre (reiniciar Firefox!)">
+<!ENTITY Ctr_cpanelmenus	"Menús del panel compacto (marcadores, historial, etc)">
+
 <!ENTITY Ctr_throbberalt	"Animación de carga alternativo para tabuladores throbber">
 <!ENTITY Ctr_bmanimation	"Animación al añadir nuevos marcadores">
 <!ENTITY Ctr_tabanimation	"Animación 'abrir y cerrar' para pestañas (about:config)">
 <!ENTITY Ctr_dlanimation	"'Descarga completa' animación (about:config)">
-<!ENTITY Ctr_showtabclose	"Mostrar siempre el botón-pestaña de cierre (reiniciar Firefox!)">
-<!ENTITY Ctr_cpanelmenus	"Menús del panel compacto (marcadores, historial, etc)">
+
+<!ENTITY Ctr_toolsitem		"Elemento en el menú de herramientas">
+<!ENTITY Ctr_appmenuitem	"Elemento en el menú de la aplicación">
 <!ENTITY Ctr_cuibotbuttons	"Los botones de opción en el modo de 'personalizar ui'">
