--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -42,7 +42,9 @@
 <!ENTITY Ctr_appbutton		"Bouton d'application">
 <!ENTITY Ctr_appbutton0		"Bouton désactivé">
 <!ENTITY Ctr_appbutton1		"Bouton sur la barre d'outils">
+<!ENTITY Ctr_appbutton1wt	"Bouton sur la barre d'outils (text only)">
 <!ENTITY Ctr_appbutton2		"Bouton sur la barre de titre">
+<!ENTITY Ctr_appbutton2io	"Bouton sur la barre de titre (icon only)">
 <!ENTITY Ctr_appbuttonc_o	"Bouton orange (par défaut)">
 <!ENTITY Ctr_appbuttonc_a	"Bouton bleu (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Bouton noir (Nightly)">
@@ -55,7 +57,6 @@
 <!ENTITY Ctr_appbuttonI2	"sur la barre de titre">
 <!ENTITY Ctr_appbuttonI3	"ou d'onglets seulement!">
 <!ENTITY Ctr_alttbappb		"Icônes alternatives (la barre d'onglets)">
-<!ENTITY Ctr_appbuttxt		"Texte 'Firefox' (la barre d'outils)">
 <!ENTITY Ctr_appbutmhi		"Position plus élevée (la barre d'outils)">
 
 <!ENTITY Ctr_ui				"Interface générale">
@@ -101,10 +102,14 @@
 <!ENTITY Ctr_tabmokcolor2	"Texte des onglets de couleur blanche">
 <!ENTITY Ctr_closeabarbut	"Masquer le bouton de fermeture de la barre des modules">
 <!ENTITY Ctr_bfurlbarfix 	"Corriger rayon de frontière de la barre d'adresse: 2px (Win) / 2.5px (Mac)">
+<!ENTITY Ctr_showtabclose	"Toujours afficher le bouton onglet de près (redémarrer Firefox!)">
+<!ENTITY Ctr_cpanelmenus	"Menus du panneau compact (signets, histoire, etc)">
+
 <!ENTITY Ctr_throbberalt	"Animation de chargement alternative pour tab-throbber">
 <!ENTITY Ctr_bmanimation	"Animation lors de l'ajout de nouveaux signets">
 <!ENTITY Ctr_tabanimation	"'Ouverture et la fermeture' animation pour les onglets (about:config)">
 <!ENTITY Ctr_dlanimation	"'Téléchargement terminé' animation (about:config)">
-<!ENTITY Ctr_showtabclose	"Toujours afficher le bouton onglet de près (redémarrer Firefox!)">
-<!ENTITY Ctr_cpanelmenus	"Menus du panneau compact (signets, histoire, etc)">
+
+<!ENTITY Ctr_toolsitem		"Élément dans le menu outils">
+<!ENTITY Ctr_appmenuitem	"Élément dans le menu d'application">
 <!ENTITY Ctr_cuibotbuttons	"Les boutons d'option en mode 'personnaliser ui'">
